--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.22.3",
+    "react-router": "^6.26.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
     "swiper": "^8.0.7",
